--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,16 @@ p, body {
 
 #searchContainer{
     height: 100%;
-    width: fit-content;
     display: flex;
     align-items: center;
-    margin: 0 auto;
 }
+
+
 #search{
+    margin: 0 auto;
     border-radius: 5px;
     height: 30%;
+    width: 40%;
     padding: 9px 4px 9px 30px;
     background-image: url(../images/Magnifying_glass_icon.svg);
     background-size: 20px;
@@ -53,9 +55,10 @@ p, body {
     border-radius: 5px;
     background-color: #F5F5F5;
     float: left;
-    height: 100%;
+    height: fit-content;
     width: 14em;
     margin: 0em 0em 2em 5em;
+    position: fixed;
 }
 
 #left-sidebar h2 {
@@ -86,7 +89,6 @@ p, body {
     height: 100%;
     margin: 0em 5em 2em 20em;
     background-color: #F5F5F5;
-    overflow: auto;
     position: relative;
     border-radius: 5px;
 }
@@ -125,12 +127,6 @@ header{
     height: 30%;
 }
 
-.entry {
-    border-top: 1px solid #ff8800;
-    clear: left;
-    margin: 0 1em 1em 1em;
-}
-
 .background{
     display: inline-block;
     text-decoration: none;
@@ -153,6 +149,7 @@ header{
 
 #breadcrumb{
     background-color: #D9D9D9;
+    border-radius: 4px;
 }
 
 #breadcrumb h2{
@@ -165,8 +162,45 @@ header{
     border-top: 2px solid black;
     width: 95%;
     margin: auto;
+    clear: both;
+    height: 7em;
+}
+
+figure{
+    position: relative;
+    float: left;
+}
+
+.overlayed{
+    border-radius: 50%;
+    position: absolute;
+    top: 0.5em;
+    left: 0.75em;
+    height: 4em;
 }
 
 #threads{
     margin: 1em 0 1em 0;
+    height: 100%;
+}
+
+#threads a:link{
+    color: black;
+    text-decoration: none;
+}
+
+#threads a:visited{
+    color: #D9D9D9;
+}
+
+.circle{
+    height: 5em;
+    width: 5em;
+    background-color: #FF9C96;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.clear {
+    clear: both;
 }
