--- a/css/style.css
+++ b/css/style.css
@@ -236,3 +236,41 @@ figure{
     width: 100%;
     display: block;
 }
+
+#avatar-div{
+    background-color: #7DC1FF;
+    width: 100%;
+    height: 15em;
+    padding-bottom: 1em;
+}
+
+#avatar-fig{
+    width: 90%;
+    height: 90%;
+    margin: 0.5em;
+    background-color: #D9D9D9;
+    margin-left: 0.75em;
+
+}
+
+#avatar-fig img{
+
+    width: 90%;
+    height: 90%;
+    margin: 0.65em 0 0 0.65em;
+
+}
+
+#avatar-fig figcaption {
+    margin-top: 1em;
+    margin-left: 5em;
+    font-weight: bold;
+}
+
+#description {
+    background-color: #D9D9D9;
+    width: 90%;
+    margin: auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
