--- a/css/style.css
+++ b/css/style.css
@@ -184,12 +184,50 @@ header{
 }
 
 .thread{
+    position: relative;
     display: block;
     border-top: 2px solid black;
     width: 95%;
     margin: auto;
     clear: both;
     height: 7em;
+}
+
+.points{
+    position: absolute;
+    right: 1em;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.comment{
+    position: relative;
+    display: block;
+    border-top: 2px solid black;
+    width: 95%;
+    margin: 1em 0 1em 1em;
+    clear: both;
+    height: fit-content;
+    padding-bottom: 1em;
+}
+
+.content{
+    margin: 0;
+}
+
+.relative{
+    position: relative;
+}
+
+.inline{
+    display: inline-block;
+}
+
+.nomargin{
+    margin: 0;
 }
 
 figure{
