--- a/css/style.css
+++ b/css/style.css
@@ -274,3 +274,14 @@ figure{
     margin-top: 1em;
     margin-bottom: 1em;
 }
+
+#options .button{
+    width: 80%;
+    border-radius: 0 5em 5em 0;
+    margin: 0.75em 0 0em 0;
+    border-left:  none;
+}
+
+#options .button:hover{
+    background-color: #7DC1FF;
+}
