Added some styling to links in left column

--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,11 @@ header{
     padding: 0.25em;
 }
 
+.content.background button{
+    cursor: pointer;
+
+}
+
 .centerme{
     margin: 0 auto;
     display: block;
