--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ p, body {
     background-color: #D9D9D9;
     height: fit-content;
     margin: 1em auto;
-    padding: 0.5em 0.5em 0.5em 0.5em
+    padding: 0.5em 0.5em 0.5em 0.5em;
 }
 
 #left-sidebar .collapsible{
@@ -174,6 +174,13 @@ header{
 
 .content.background button{
     cursor: pointer;
+
+}
+
+#organizethreadbuttons button{
+    width: 90%;
+    margin: 1em 0 1em 0;
+    margin-left: 0.75em;
 
 }
 
