--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,11 @@ header{
 
 }
 
+.button:active{
+    background-color: #ff9c96;
+    color: black;
+}
+
 .header-links{
     display: inline-block;
     text-decoration: none;
@@ -183,9 +188,12 @@ header{
 
 }
 
-#organizethreadbuttons button{
+#organizethreadbuttons{
+    padding-top:1em;
+}
+#organizethreadbuttons input, #organizethreadbuttons button{
     width: 90%;
-    margin: 1em 0 1em 0;
+    margin: 0 0 1em 0;
     margin-left: 0.75em;
 
 }
@@ -441,4 +449,21 @@ figure{
   }
   #show-popup-button {
     margin-top: 20px;
+  }
+
+  #sorting_container {
+    background-color: #D9D9D9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding: 1em;
+  }
+
+  .selected {
+    background-color: #467eb3;
+    color: white;
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out;
   }
